apps/adminer/adminer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminer
  namespace: game-point-club
  labels:
    app: adminer
spec:
  selector:
    matchLabels:
      app: adminer
  replicas: 1
  template:
    metadata:
      labels:
        app: adminer
    spec:
      containers:
        - name: adminer
          image: adminer
          resources:
            requests:
              memory: '64Mi'
              cpu: '0.125'
            limits:
              memory: '128Mi'
              cpu: '0.25'
