apps/adminer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adminer-srv
  namespace: game-point-club
spec:
  selector:
    app: adminer
  ports:
    - name: adminer
      protocol: TCP
      port: 8080
      targetPort: 8080
