apps/adminer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adminer-ingress
  namespace: game-point-club
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cluster-issuer
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: adminer-basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
spec:
  tls:
    - hosts:
        - adminer.game-point.club
      secretName: adminer-cert-tls
  rules:
    - host: adminer.game-point.club
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: adminer-srv
                port:
                  number: 8080
